@@ -1,8 +1,11 @@
 use strict;
 use warnings;
-use Module::Build;
 
-my $builder = Module::Build->new(
+use lib './inc';
+
+use Test::Run::Builder;
+
+my $builder = Test::Run::Builder->new(
     module_name         => 'String::Random',
     license             => 'perl',
     dist_author         => 'Steven Pritchard <steve@silug.org>',
